@@ -4,6 +4,9 @@ Changelog
 HEAD
 ~~~~
 
+- Visit evaluation before assignment in order to support assignments
+  that rely on the same name in the dynamic variable scope. [malthe]
+
 - Conditions may now be inverted; this facilitates the bug-fix of an
   issue where omit conditions were multi-part. [malthe]
 
